# digr

./: .gitignore  .mcpbignore  CLAUDE.md  Dockerfile  LICENSE  README.md  build_mcpb.py  docker-compose.yml  install-mac.command  install.bat  install.ps1  manifest.json  pyproject.toml
.github/workflows/: release.yml
src/digr/: __init__.py  __main__.py  config.py  platform_detect.py  server.py  updater.py
src/digr/tools/: __init__.py  _shared.py  analyze.py  browse.py  organize.py  search.py
src/sample_library_manager/: __init__.py  __main__.py  config.py  platform_detect.py  server.py  updater.py
src/sample_library_manager/tools/: __init__.py  _audio_analysis.py  _shared.py  analyze.py  browse.py  organize.py  search.py
tests/: __init__.py  conftest.py  test_audio_analysis.py  test_browse.py  test_config.py  test_integration.py  test_license.py  test_organize.py  test_platform.py  test_search.py
