[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sample-library-manager"
version = "2.0.0"
description = "MCP server for searching, analyzing, and organizing audio sample libraries"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sample Library Manager Contributors" },
]
keywords = ["mcp", "audio", "samples", "music-production", "ableton", "daw"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=1.26.0",
    "mido>=1.3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
audio = [
    "librosa>=0.11.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
]
full = [
    "sample-library-manager[audio]",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
sample-library-manager = "sample_library_manager.__main__:main"

[project.urls]
Homepage = "https://github.com/sample-library-manager/sample-library-manager"
Repository = "https://github.com/sample-library-manager/sample-library-manager"

[tool.hatch.build.targets.wheel]
packages = ["src/sample_library_manager"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
