[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digr"
version = "1.0.1"
description = "Search, organize, and analyze your audio sample library using natural language. Works with any DAW."
license = "BUSL-1.1"
requires-python = ">=3.11"
authors = [
    { name = "Sentinel Protocol Lab" },
]
keywords = ["mcp", "audio", "samples", "music-production", "ableton", "daw", "sound-design", "sample-library", "audio-search", "fl-studio", "logic-pro", "reaper", "bitwig"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "mcp>=1.26.0",
    "mido>=1.3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
audio = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "soundfile>=0.12.0",
]
full = [
    "digr[audio]",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
digr = "digr.__main__:main"

[project.urls]
Homepage = "https://github.com/sentinel-protocol-lab/digr"
Repository = "https://github.com/sentinel-protocol-lab/digr"
Issues = "https://github.com/sentinel-protocol-lab/digr/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/digr"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
